# drone_env

./: .dockerignore  .gitignore  Blog.md  Dockerfile  LICENSE  README.md  __init__.py  api_final_fail.txt  api_output.txt  check_graders.py  client.py  drone_env.ipynb  final_api_check.txt  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_output.txt  train.py  validate-submission.sh
colab_notebook/: drone_env.ipynb
core/: __init__.py  drone.py  graders.py  grid_generator.py  state_manager.py  tasks.py
data/: memory.json
data/easy/: memory.json  train_metrics.csv
data/hard/: memory.json  train_metrics.csv
data/medium/: memory.json  train_metrics.csv
drone_env/: __init__.py  models.py
drone_env/core/: obstacles.py  state_manager.py  tasks.py
drone_env/server/: Dockerfile  app.py  grid_world_environment.py  map_generator.py
graders/: __init__.py  easy.py  hard.py  medium.py
rl/: __init__.py  model.py  policy.py  trainer.py  unsloth_trainer.py
server/: __init__.py  app.py  drone_env_environment.py  drone_env_environment.py.bak  grid_world_environment.py
server/static/: index.html  script.js  style.css
tests/: final_check.py  test_api.py  test_env.py
tmp/: test_boundary.py  test_grader.py  test_tree.py
